[tool.poetry]
name = "fntypes"
version = "0.1.4.post3"
description = ""
authors = ["timoniq"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"
typing-extensions = "^4.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
