[project]
name = "fntypes"
version = "0.2.1"
description = ""
authors = [{ name = "timoniq" }]
requires-python = "~=3.13"
readme = "readme.md"
dependencies = ["typing-extensions>=4.13.2,<5"]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "pytest-asyncio>=1.0.0,<2",
    "ruff>=0.11.12,<0.12",
    "pyright>=1.1.401,<2",
    "pre-commit>=4.2.0,<5.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 150
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
  "I",
  "D",
  "N",
  "PLR",
  "Q",
  "COM",
  "TC",
  "YTT",
  "SIM"
]
ignore = [
  "COM812",
  "N805",
  "N818",
  "TC001",
  "TC002",
  "TC003",
  "TC004",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D202",
  "D203",
  "D205",
  "D209",
  "D211",
  "D213",
  "D400",
  "D401",
  "D404",
  "D415",
  "PLR2004",
  "PLR0911",
  "PLR0912",
  "PLR0913"
]
fixable = ["ALL"]
exclude = [".venv", ".idea"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.basedpyright]
exclude = [
  ".venv",
  ".idea",
  ".ruff_cache",
  ".pytest_cache",
  "tests",
  "examples"
]
typeCheckingMode = "strict"
pythonPlatform = "All"
pythonVersion = "3.13"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnannotatedClassAttribute = false
reportAny = false
reportUnusedCallResult = false
